2002-12-05  Derek Atkins  <derek@ihtfp.com>

	* src/gnome-search/Makefile.am: add GDK_PIXBUF_CFLAGS because
	  it is pulled in by gtkhtml, which is pulled in from window-help.	  

	* revert patch -- not needed.  Oops.

	* src/gnome/glade/register.glade -- add "Edit Exchange Rate" menu
	  items to the Actions menu and the context menu
	* src/gnome/gnc-split-reg.c -- turn off Exchange Rate editing on
	  "read-only" registers
	* src/register/ledger-core/split-register-control.c -- fix the logic
	  for when we pop-up the exchange-rate dialog, in particular when the
	  user requests it.   Fixes #100285

	* src/gnome-utils/dialog-transfer.[ch]: add two APIs to set the
	  exchange rate and to set "swapped currencies".  The former will
	  set the "price" and the latter will set a (as of yet unused) flag.
	* src/register/ledger-core/split-register-control.c: Don't pop up
	  the exchange dialog when it is not needed, even when reqested.
	
2002-12-04  David Hampton  <hampton@employees.org>

	* src/quotes/finance-quote-helper.in (schemify_quote): Allow stock
	index names to be passed though from gnucash to
	Finance::Quote. Necessary but not sufficient to solve #88118.

	* src/scm/price-quotes.scm ((gnc:fq-get-quotes)): Beef up the
	error handling. Should now print a warning message if the price
	quote lookup fails, instead of crashing. #100186

2002-12-04  Derek Atkins  <derek@ihtfp.com>

	* src/register/ledger-core/split-register-p.h:
	* src/register/ledger-core/split-register.h:
	  move handle_exchange() API from -p.h to .h to export it
	  for the menus to call.

	* src/gnome/gnc-split-reg.c:  add a handler for
	  exchange-rate menu items..  Partial fix for #100285

	* README: fix references to g-wrap
	* acinclude.m4: fix g-wrap test to fail properly if it cannot
	  find g-wrap-config

	* remove src/experimental/ofx from the build system

	* src/import-export/qif-import/qif-parse.scm:
	* src/import-export/qif-io-core/qif-parse.scm: