@@ -1,3 +1,10 @@
+2002-12-06  David Hampton  <hampton@employees.org>
+
+	* src/quotes/finance-quote-helper.in: Add an additional module to
+	check for (LWP aka libwww-perl) before attempting to call
+	Finance::Quote.  Work around the fact that the Finance::Quote::VWD
+	module doesn't return the stock symbol.
+
 2002-12-05  Derek Atkins  <derek@ihtfp.com>
 
 	* src/gnome-search/Makefile.am: add GDK_PIXBUF_CFLAGS because
